--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -1,19 +1,16 @@
-<!-- This footer should hidden by default and shown when there are todos -->
 <footer class="footer">
-    <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> Tareas pendientes</span>
-    <!-- Remove this if you don't implement routing -->
+
+    <span class="todo-count"><strong> {{ pendientes }} </strong> Tareas pendientes</span>
+
     <ul class="filters">
-        <li>
-            <a class="selected" href="#/">Todas</a>
+
+        <li *ngFor="let filtro of filtros" (click)="cambiarFiltro(filtro)">
+            <a [class.selected]="filtro === filtroActual">{{ filtro | titlecase}}
+
+            </a>
         </li>
-        <li>
-            <a href="#/active">Activas</a>
-        </li>
-        <li>
-            <a href="#/completed">Completadas</a>
-        </li>
+
     </ul>
-    <!-- Hidden if no completed items are left ↓ -->
+
     <button class="clear-completed">Limpiar completadas</button>
 </footer>
