--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -7,7 +7,7 @@
 
         <label (dblclick)="editar()">{{ todo.texto }}</label>
 
-        <button class="destroy"></button>
+        <button class="destroy" (click)="borrar()"></button>
 
     </div>
 
