--- a/src/app/todos/todo-page/todo-page.component.html
+++ b/src/app/todos/todo-page/todo-page.component.html
@@ -4,7 +4,9 @@
 
     <!-- This section should be hidden by default and shown when there are todos -->
     <section class="main">
-        <input id="toggle-all" class="toggle-all" type="checkbox">
+
+        <input id="toggle-all" (click)="toggleAll()" class="toggle-all" type="checkbox">
+
         <label for="toggle-all">Mark all as complete</label>
 
         <app-todo-list></app-todo-list>
