--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -12,5 +12,5 @@
 
     </ul>
 
-    <button class="clear-completed">Limpiar completadas</button>
+    <button class="clear-completed" (click)="limpiarCompletados()">Limpiar completadas</button>
 </footer>
